manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: my-app
spec:

  analysis:
    successfulRunHistoryLimit: 3
    unsuccessfulRunHistoryLimit: 3

  selector:
    matchLabels:
      app: my-app

  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: ngnix
        image: nginx:1.20.0
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 10m

  rollbackWindow:
    revisions: 3

  strategy:

    blueGreen:

      activeService: rollout-ngnix-active # <- matches Active Service metadata 
      previewService: rollout-ngnix-preview # <- matches Preview Service metadata
      
      autoPromotionEnabled: false
