manifests/active.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-ngnix-active # <- active 
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
