manifests/preview.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-ngnix-preview # <- preview
spec:
  selector:
    app: ngnix
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
